--- a/1.7.3/Dockerfile
+++ b/1.7.3/Dockerfile
@@ -1,8 +1,8 @@
 FROM debian:stretch as openssl
 LABEL maintainer="Matthew Vance"
 
-ENV VERSION_OPENSSL=openssl-1.1.0h
-ENV SHA256_OPENSSL=5835626cde9e99656585fc7aaa2302a73a7e1340bf8c14fd635a62c66802a517
+ENV VERSION_OPENSSL=openssl-1.1.0i
+ENV SHA256_OPENSSL=ebbfc844a8c8cc0ea5dc10b86c9ce97f401837f3fa08c17b2cdadc118253cf99
 ENV SOURCE_OPENSSL=https://www.openssl.org/source/
 ENV GPG_OPENSSL=8657ABB260F056B1E5190839D9C4D26D0E604491
 
