Use lowercase for local vars.

--- a/1.7.3/Dockerfile
+++ b/1.7.3/Dockerfile
@@ -9,9 +9,9 @@ ENV GPG_OPENSSL=8657ABB260F056B1E5190839D9C4D26D0E604491
 WORKDIR /tmp/src
 
 RUN set -e -x && \
-    BUILD_DEPS='build-essential ca-certificates curl dirmngr gnupg libidn2-0-dev libssl-dev' && \
+    build_deps='build-essential ca-certificates curl dirmngr gnupg libidn2-0-dev libssl-dev' && \
     DEBIAN_FRONTEND=noninteractive apt-get update && apt-get install -y --no-install-recommends \
-      "$BUILD_DEPS" && \
+      "$build_deps" && \
     curl -L $SOURCE_OPENSSL$VERSION_OPENSSL.tar.gz -o openssl.tar.gz && \
     echo "${SHA256_OPENSSL} ./openssl.tar.gz" | sha256sum -c - && \
     curl -L $SOURCE_OPENSSL$VERSION_OPENSSL.tar.gz.asc -o openssl.tar.gz.asc && \
@@ -28,7 +28,7 @@ RUN set -e -x && \
     make && \
     make install_sw && \
     apt-get purge -y --auto-remove \
-      "$BUILD_DEPS" && \
+      "$build_deps" && \
     rm -rf /tmp/* /var/tmp/* /var/lib/apt/lists/*
 
 FROM debian:stretch
@@ -56,10 +56,10 @@ WORKDIR /tmp/src
 
 COPY --from=openssl /opt/openssl /opt/openssl
 
-RUN BUILD_DEPS='ca-certificates curl gcc libc-dev libevent-dev libexpat1-dev make' && \
+RUN build_deps='ca-certificates curl gcc libc-dev libevent-dev libexpat1-dev make' && \
     set -x && \
     DEBIAN_FRONTEND=noninteractive apt-get update && apt-get install -y --no-install-recommends \
-      "$BUILD_DEPS" \
+      "$build_deps" \
       bsdmainutils \
       ldnsutils \
       libevent-2.0 \
@@ -83,7 +83,7 @@ RUN BUILD_DEPS='ca-certificates curl gcc libc-dev libevent-dev libexpat1-dev mak
     mv /opt/unbound/etc/unbound/unbound.conf /opt/unbound/etc/unbound/unbound.conf.example && \
     rm -fr /opt/unbound/share/man && \
     apt-get purge -y --auto-remove \
-      "$BUILD_DEPS" && \
+      "$build_deps" && \
     rm -fr /tmp/* /var/tmp/* /var/lib/apt/lists/*
 
 COPY a-records.conf /opt/unbound/etc/unbound/
