Improve rm usage

--- a/1.7.3/Dockerfile
+++ b/1.7.3/Dockerfile
@@ -29,7 +29,10 @@ RUN set -e -x && \
     make install_sw && \
     apt-get purge -y --auto-remove \
       "$build_deps" && \
-    rm -rf /tmp/* /var/tmp/* /var/lib/apt/lists/*
+    rm -rf \
+        /tmp/* \
+        /var/tmp/* \
+        /var/lib/apt/lists/*
 
 FROM debian:stretch
 LABEL maintainer="Matthew Vance"
@@ -81,10 +84,13 @@ RUN build_deps="ca-certificates curl gcc libc-dev libevent-dev libexpat1-dev mak
         --enable-event-api && \
     make install && \
     mv /opt/unbound/etc/unbound/unbound.conf /opt/unbound/etc/unbound/unbound.conf.example && \
-    rm -fr /opt/unbound/share/man && \
     apt-get purge -y --auto-remove \
       "$build_deps" && \
-    rm -fr /tmp/* /var/tmp/* /var/lib/apt/lists/*
+    rm -rf \
+        /opt/unbound/share/man \
+        /tmp/* \
+        /var/tmp/* \
+        /var/lib/apt/lists/*
 
 COPY a-records.conf /opt/unbound/etc/unbound/
 COPY unbound.sh /
