--- a/1.7.3/Dockerfile
+++ b/1.7.3/Dockerfile
@@ -11,7 +11,7 @@ WORKDIR /tmp/src
 RUN set -e -x && \
     build_deps="build-essential ca-certificates curl dirmngr gnupg libidn2-0-dev libssl-dev" && \
     DEBIAN_FRONTEND=noninteractive apt-get update && apt-get install -y --no-install-recommends \
-      "$build_deps" && \
+      $build_deps && \
     curl -L $SOURCE_OPENSSL$VERSION_OPENSSL.tar.gz -o openssl.tar.gz && \
     echo "${SHA256_OPENSSL} ./openssl.tar.gz" | sha256sum -c - && \
     curl -L $SOURCE_OPENSSL$VERSION_OPENSSL.tar.gz.asc -o openssl.tar.gz.asc && \
@@ -28,7 +28,7 @@ RUN set -e -x && \
     make && \
     make install_sw && \
     apt-get purge -y --auto-remove \
-      "$build_deps" && \
+      $build_deps && \
     rm -rf \
         /tmp/* \
         /var/tmp/* \
@@ -62,7 +62,7 @@ COPY --from=openssl /opt/openssl /opt/openssl
 RUN build_deps="ca-certificates curl gcc libc-dev libevent-dev libexpat1-dev make" && \
     set -x && \
     DEBIAN_FRONTEND=noninteractive apt-get update && apt-get install -y --no-install-recommends \
-      "$build_deps" \
+      $build_deps \
       bsdmainutils \
       ldnsutils \
       libevent-2.0 \
@@ -85,7 +85,7 @@ RUN build_deps="ca-certificates curl gcc libc-dev libevent-dev libexpat1-dev mak
     make install && \
     mv /opt/unbound/etc/unbound/unbound.conf /opt/unbound/etc/unbound/unbound.conf.example && \
     apt-get purge -y --auto-remove \
-      "$build_deps" && \
+      $build_deps && \
     rm -rf \
         /opt/unbound/share/man \
         /tmp/* \
