:arrow_up: Update to OpenSSL 1.1.1

--- a/1.7.3/Dockerfile
+++ b/1.7.3/Dockerfile
@@ -1,8 +1,8 @@
 FROM debian:stretch as openssl
 LABEL maintainer="Matthew Vance"
 
-ENV VERSION_OPENSSL=openssl-1.1.0i
-ENV SHA256_OPENSSL=ebbfc844a8c8cc0ea5dc10b86c9ce97f401837f3fa08c17b2cdadc118253cf99
+ENV VERSION_OPENSSL=openssl-1.1.1
+ENV SHA256_OPENSSL=2836875a0f89c03d0fdf483941512613a50cfb421d6fd94b9f41d7279d586a3d
 ENV SOURCE_OPENSSL=https://www.openssl.org/source/
 ENV OPGP_OPENSSL=8657ABB260F056B1E5190839D9C4D26D0E604491
 
