--- a/1.7.0/Dockerfile
+++ b/1.7.0/Dockerfile
@@ -1,8 +1,8 @@
 FROM debian:stretch as openssl
 LABEL maintainer="Matthew Vance"
 
-ENV VERSION_OPENSSL=openssl-1.1.0h
-ENV SHA256_OPENSSL=5835626cde9e99656585fc7aaa2302a73a7e1340bf8c14fd635a62c66802a517
+ENV VERSION_OPENSSL=openssl-1.1.1
+ENV SHA256_OPENSSL=2836875a0f89c03d0fdf483941512613a50cfb421d6fd94b9f41d7279d586a3d
 ENV SOURCE_OPENSSL=https://www.openssl.org/source/
 ENV GPG_OPENSSL=8657ABB260F056B1E5190839D9C4D26D0E604491
 
