--- a/1.7.3/Dockerfile
+++ b/1.7.3/Dockerfile
@@ -39,7 +39,7 @@ LABEL maintainer="Matthew Vance"
 ENV NAME=unbound \
     UNBOUND_VERSION=1.7.3 \
     UNBOUND_SHA256=c11de115d928a6b48b2165e0214402a7a7da313cd479203a7ce7a8b62cba602d \
-    UNBOUND_DOWNLOAD_URL=https://www.unbound.net/downloads/unbound-1.7.3.tar.gz \
+    UNBOUND_DOWNLOAD_URL=https://nlnetlabs.nl/downloads/unbound/unbound-1.7.3.tar.gz \
     VERSION=0 \
     SUMMARY="${NAME} is a validating, recursive, and caching DNS resolver." \
     DESCRIPTION="${NAME} is a validating, recursive, and caching DNS resolver."
