--- a/1.10.0/Dockerfile
+++ b/1.10.0/Dockerfile
@@ -128,6 +128,7 @@ RUN set -x && \
 
 COPY a-records.conf /opt/unbound/etc/unbound/
 COPY forward-records.conf /opt/unbound/etc/unbound/
+COPY srv-records.conf /opt/unbound/etc/unbound/
 COPY unbound.sh /
 
 RUN chmod +x /unbound.sh
