Use only one upstream provider by default

--- a/1.12.0/forward-records.conf
+++ b/1.12.0/forward-records.conf
@@ -14,8 +14,8 @@ forward-zone:
     #forward-addr: 2606:4700:4700::1001@853#cloudflare-dns.com
 
     ## CleanBrowsing Security Filter
-    forward-addr: 185.228.168.9@853#security-filter-dns.cleanbrowsing.org
-    forward-addr: 185.228.169.9@853#security-filter-dns.cleanbrowsing.org
+    # forward-addr: 185.228.168.9@853#security-filter-dns.cleanbrowsing.org
+    # forward-addr: 185.228.169.9@853#security-filter-dns.cleanbrowsing.org
     # forward-addr: 2a0d:2a00:1::2@853#security-filter-dns.cleanbrowsing.org
     # forward-addr: 2a0d:2a00:2::2@853#security-filter-dns.cleanbrowsing.org
 
