Revise healthcheck (close #67)

--- a/1.13.1/Dockerfile
+++ b/1.13.1/Dockerfile
@@ -138,6 +138,6 @@ ENV PATH /opt/unbound/sbin:"$PATH"
 EXPOSE 53/tcp
 EXPOSE 53/udp
 
-HEALTHCHECK --interval=5s --timeout=3s --start-period=5s CMD drill @127.0.0.1 cloudflare.com || exit 1
+HEALTHCHECK --interval=30s --timeout=30s --start-period=10s --retries=3 CMD drill @127.0.0.1 cloudflare.com || exit 1
 
 CMD ["/unbound.sh"]
