--- a/1.16.0/Dockerfile
+++ b/1.16.0/Dockerfile
@@ -81,7 +81,8 @@ RUN build_deps="curl gcc libc-dev libevent-dev libexpat1-dev libnghttp2-dev make
         --enable-dnstap \
         --enable-tfo-server \
         --enable-tfo-client \
-        --enable-event-api && \
+        --enable-event-api \
+        --enable-subnet && \
     make install && \
     mv /opt/unbound/etc/unbound/unbound.conf /opt/unbound/etc/unbound/unbound.conf.example && \
     apt-get purge -y --auto-remove \
