--- a/1.16.2/Dockerfile
+++ b/1.16.2/Dockerfile
@@ -44,7 +44,7 @@ FROM debian:bullseye as unbound
 LABEL maintainer="Matthew Vance"
 
 ENV NAME=unbound \
-    UNBOUND_VERSION=1.16.2
+    UNBOUND_VERSION=1.16.2 \
     UNBOUND_SHA256=2e32f283820c24c51ca1dd8afecfdb747c7385a137abe865c99db4b257403581 \
     UNBOUND_DOWNLOAD_URL=https://nlnetlabs.nl/downloads/unbound/unbound-1.16.2.tar.gz
 
