--- a/1.17.0/data/opt/unbound/etc/unbound/forward-records.conf
+++ b/1.17.0/data/opt/unbound/etc/unbound/forward-records.conf
@@ -13,6 +13,18 @@ forward-zone:
     #forward-addr: 2606:4700:4700::1111@853#cloudflare-dns.com
     #forward-addr: 2606:4700:4700::1001@853#cloudflare-dns.com
 
+    ## Cloudflare Malware
+    # forward-addr: 1.1.1.2@853#security.cloudflare-dns.com
+    # forward-addr: 1.0.0.2@853#security.cloudflare-dns.com
+    # forward-addr: 2606:4700:4700::1112@853#security.cloudflare-dns.com
+    # forward-addr: 2606:4700:4700::1002@853#security.cloudflare-dns.com
+
+    ## Cloudflare Malware and Adult Content
+    # forward-addr: 1.1.1.3@853#family.cloudflare-dns.com
+    # forward-addr: 1.0.0.3@853#family.cloudflare-dns.com
+    # forward-addr: 2606:4700:4700::1113@853#family.cloudflare-dns.com
+    # forward-addr: 2606:4700:4700::1003@853#family.cloudflare-dns.com
+
     ## CleanBrowsing Security Filter
     # forward-addr: 185.228.168.9@853#security-filter-dns.cleanbrowsing.org
     # forward-addr: 185.228.169.9@853#security-filter-dns.cleanbrowsing.org
